--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "api.alter-recrut.fr",
+  "name": "api",
   "version": "1.0.0",
-  "description": "",
+  "description": "nodejs api",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon server.js",
+    "clear": "node src/routes/contacts"
   },
   "keywords": [],
   "author": "",
@@ -18,14 +19,23 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "google-spreadsheet": "^4.1.1",
     "googleapis": "^128.0.0",
     "helmet": "^7.0.0",
     "mongodb": "^5.7.0",
     "mongoose": "^8.0.2",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.7",
+    "nodemailer": "^6.9.8",
     "nodemon": "^3.0.1",
     "twilio": "^4.19.0",
+    "uuid": "^9.0.1",
     "vue-cookies": "^1.8.3"
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-config-google": "^0.14.0"
   }
 }
