--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@vonage/server-sdk": "^3.10.0",
     "axios": "^1.6.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -19,7 +18,6 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "google-spreadsheet": "^4.1.1",
     "googleapis": "^128.0.0",
     "helmet": "^7.0.0",
     "mongodb": "^5.7.0",
@@ -27,9 +25,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.1",
-    "twilio": "^4.19.0",
-    "uuid": "^9.0.1",
-    "vue-cookies": "^1.8.3"
+    "uuid": "^9.0.1"
   },
   "directories": {
     "test": "tests"
