--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tomizap/tools": "^1.1.133",
     "axios": "^1.6.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
