--- a/package.json
+++ b/package.json
@@ -1,39 +1,35 @@
 {
-  "name": "api",
+  "name": "simple-crud-app",
   "version": "1.0.0",
-  "description": "nodejs api",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "serve": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@tomizap/tools": "^1.1.146",
-    "axios": "^1.6.1",
+    "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "googleapis": "^128.0.0",
-    "helmet": "^7.0.0",
-    "mongodb": "^5.7.0",
-    "mongoose": "^8.0.2",
+    "googleapis": "^137.1.0",
+    "helmet": "^7.1.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.0",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.8",
-    "nodemon": "^3.0.1",
-    "stripe": "^14.19.0",
-    "uuid": "^9.0.1"
-  },
-  "directories": {
-    "test": "tests"
+    "nodemailer": "^6.9.13",
+    "stripe": "^15.7.0",
+    "tz-mongoose-schemas": "^1.0.6",
+    "tz-toolbox": "^1.0.1"
   },
   "devDependencies": {
-    "eslint": "^8.56.0",
-    "eslint-config-google": "^0.14.0"
-  }
+    "nodemon": "^3.0.3"
+  },
+  "description": ""
 }
